--- a/src/content/about-us/find-us.mdx
+++ b/src/content/about-us/find-us.mdx
@@ -10,7 +10,14 @@ import TelegramLogo from "../../assets/telegram-logo.svg";
 import DiscordLogo from "../../assets/discord-logo.svg";
 import InstagramLogo from "../../assets/instagram-logo.svg";
 
-<div style={{ display: 'grid', justifyItems: 'center', textAlign: 'center', gap: '1rem'}}>
+<div
+  style={{
+    display: "grid",
+    justifyItems: "center",
+    textAlign: "center",
+    gap: "1rem",
+  }}
+>
   <SocialMediaButton
     href="https://twitter.com/FurtherSouthUK"
     alt="X logo"
