updated text - venue, registration, activities

--- a/src/content/registration/index.mdx
+++ b/src/content/registration/index.mdx
@@ -9,20 +9,18 @@ import RegisterButton from "../../components/RegisterButton.astro";
 
 To register at the convention, you will need to purchase a ticket of one of the following types:
 
-**Day Passes** – allow you to choose one day of the event and visit all activities during that time. This year these are priced at £25 per person
+**Day Passes** – allow you to choose one day of the event and visit all activities during that time. This year these are priced at £20 per person
 
 **Attendance Tickets** – allow you to visit the venue hotel throughout each of the four days of the convention and enjoy all of the activities throughout. This year these are still priced at only £65 per person
 
-**Residential Tickets** – includes your overnight stay at the hotel at a discounted rate in addition to the Attendance ticket. New updated prices for three nights will be available soon.
+**Residential Tickets** – includes your overnight stay at the hotel, with breakfast in addition to the Attendance ticket. Plentiful shared double or twin rooms are available for £255 per person, while a limited set of single rooms can be booked, running to £440 each. As well, check out our new offering, triple bedrooms, which let you share with both a double bed and sofa-bed for just £230 each.
 
 ## Opening Dates
 
-Registration for 2026 will be launching later this year, around September. Watch this space or follow the social media accounts for up to the minute news as this new opening approaches.
+Registration launched on September 1st, and will continue through to the end of January for Residential ticket options, and to the end of February for Attendance only and Day Passes. Ticket registration can be started at any time, the site saving entered data whenever you return, with no time limits on completing and paying your selection aside from the listed close of registration dates.
 
 ## How to Register
 
-The link below will take you to our Civet Solutions hosted registration portal. Here, you can enter your personal details, choose your options and make your payment all in one place. Payments are processed via the Stripe Payment Service, which runs off your credit/debit card numbers. All details are securely stored and processed on servers our team has no access to.
-
-The form saves all of your details so you can start now and come back later. It also saves your entries from one year to the next, saving you time when you want to come back and join us again in 2026
+The big button below will take you to our Civet Solutions hosted registration portal. Here, you can enter your personal details, choose your options and make your payment all in one place. Payments are processed via the Stripe Payment Service, which runs off your credit/debit card numbers. All details are securely stored and processed on servers our team has no access to. If you were with us for 2025, the site will retain your previous account and details for faster processing now.
 
 <RegisterButton />
