Fixed incorrect link for instagram

--- a/src/content/about-us/find-us.mdx
+++ b/src/content/about-us/find-us.mdx
@@ -54,7 +54,7 @@ import InstagramLogo from "../../assets/instagram-logo.svg";
     text="Discord"
   />
   <SocialMediaButton
-    href="https://discord.com/invite/jCmAnhBDXx"
+    href="https://www.instagram.com/wyvernevents"
     alt="Instagram logo"
     side="right"
     src={InstagramLogo}
