--- a/src/content/about-us/staff.mdx
+++ b/src/content/about-us/staff.mdx
@@ -19,6 +19,7 @@ import Ra from "@assets/ra.jpg";
 import Ghasteater from "@assets/ghast.jpg";
 import Phil from "@assets/phil-pem.jpg";
 import CivetSolutions from "@assets/civet-solutions.jpg";
+import Zeke from "@assets/zeke.webp"
 
 ### Meet the Staff
 
@@ -102,6 +103,12 @@ import CivetSolutions from "@assets/civet-solutions.jpg";
   </p>
 </ImageParagraph>
 
+<ImageParagraph src={Zeke} alt="Zeke" side="CHANGE FROM DOWN HERE">
+  <p class="my-0">
+    Zeke, a multisuiter london fur who is also Vice Chairman of East Sussex Furs, 
+    using his experience in the furry fandom to assist us with registration. 
+  </p>
+</ImageParagraph>
 ### Staff on a Break
 
 <ImageParagraph src={Ra} alt="Ra" side="left">
