Added image & prettier

--- a/src/content/about-us/staff.mdx
+++ b/src/content/about-us/staff.mdx
@@ -19,7 +19,7 @@ import Ra from "@assets/ra.jpg";
 import Ghasteater from "@assets/ghast.jpg";
 import Phil from "@assets/phil-pem.jpg";
 import CivetSolutions from "@assets/civet-solutions.jpg";
-import Zeke from "@assets/zeke.webp"
+import Zeke from "@assets/zeke.webp";
 
 ### Meet the Staff
 
@@ -105,8 +105,9 @@ import Zeke from "@assets/zeke.webp"
 
 <ImageParagraph src={Zeke} alt="Zeke" side="CHANGE FROM DOWN HERE">
   <p class="my-0">
-    Zeke, a multisuiter london fur who is also Vice Chairman of East Sussex Furs, 
-    using his experience in the furry fandom to assist us with registration. 
+    Zeke, a multisuiter london fur who is also Vice Chairman of East Sussex
+    Furs, using his experience in the furry fandom to assist us with
+    registration.
   </p>
 </ImageParagraph>
 ### Staff on a Break
