Added Zeke, Foxie, Oscar, Ace & Neo

--- a/src/content/about-us/staff.mdx
+++ b/src/content/about-us/staff.mdx
@@ -19,15 +19,25 @@ import Ra from "@assets/ra.jpg";
 import Ghasteater from "@assets/ghast.jpg";
 import Phil from "@assets/phil-pem.jpg";
 import CivetSolutions from "@assets/civet-solutions.jpg";
+import Zeke from "@assets/zeke.webp";
+import Neo from "@assets/neo.webp";
+import Foxie from "@assets/foxie.jpg"
 
 ### Meet the Staff
 
-<ImageParagraph src={DerpyDoo} alt="DerpyDoo Designs" side="left">
+<ImageParagraph src={Kit} alt="Kit" side="right">
   <p class="my-0">
-    DerpyDoo Designs, the source of pretty much all the more recent art used in
-    our advertising and social media after many hours of work. Long time artist,
-    occasional furmeet organiser, behind the scenes administration for the
-    convention. Also chairperson for Further South.
+    Kit, long time furmeet organiser, helps out with starting a lot of new
+    events up and down the country. Liaison with the venue and others as needed,
+    agents, payment providers, equipment hire, tax office and more
+  </p>
+</ImageParagraph>
+
+<ImageParagraph src={Zeke} alt="Zeke" side="left">
+  <p class="my-0">
+    Zeke, a multisuiter london fur who is also Vice Chairman of East Sussex
+    Furs, using his experience in the furry fandom to assist Further South
+    as Operations Coordinator.  
   </p>
 </ImageParagraph>
 
@@ -38,6 +48,20 @@ import CivetSolutions from "@assets/civet-solutions.jpg";
   </p>
 </ImageParagraph>
 
+<ImageParagraph src={Neo} alt="Neo Moonpaw" side="left">
+  <p class="my-0">
+    Neo, a local sound and lighting engineer based in the hometown of Further South, 
+    Portsmouth. He’s a staff member for PortsmouthFurs and Sussex Furs, ensuring people
+    feel welcomed and are all having an amazing time!
+  </p>
+</ImageParagraph>
+
+<ImageParagraph src={placeholder} alt="Ace" side="right">
+  <p class="my-0">
+    Ace, assisting with music equipment.
+  </p>
+</ImageParagraph>
+
 <ImageParagraph src={Millie} alt="Millie" side="left">
   <p class="my-0">
     Millie, sound and lighting, lasers, pyrotechnics, all that fun stuff,
@@ -45,11 +69,11 @@ import CivetSolutions from "@assets/civet-solutions.jpg";
   </p>
 </ImageParagraph>
 
-<ImageParagraph src={Kit} alt="Kit" side="right">
+<ImageParagraph src={Rinzler} alt="Rinzler" side="right">
   <p class="my-0">
-    Kit, long time furmeet organiser, helps out with starting a lot of new
-    events up and down the country. Liaison with the venue and others as needed,
-    agents, payment providers, equipment hire, tax office and more
+    Rinzler, another game developer, more used to staffing game tournaments and
+    conventions than furry events, eager to help out with sound, lighting and other
+    equipment. 
   </p>
 </ImageParagraph>
 
@@ -61,15 +85,7 @@ import CivetSolutions from "@assets/civet-solutions.jpg";
   </p>
 </ImageParagraph>
 
-<ImageParagraph src={placeholder} alt="Pun King" side="right">
-  <p class="my-0">
-    Pun King, game developer with long time experience at related events,
-    regularly handling our social media, communications, note taking at meetings
-    and other administration work
-  </p>
-</ImageParagraph>
-
-<ImageParagraph src={Hackney} alt="Hackney" side="left">
+<ImageParagraph src={Hackney} alt="Hackney" side="right">
   <p class="my-0">
     Hackney, not actually from London, just steals their names for characters,
     traditional pencil favouring artist, and eagerly working hard making things
@@ -77,11 +93,15 @@ import CivetSolutions from "@assets/civet-solutions.jpg";
   </p>
 </ImageParagraph>
 
-<ImageParagraph src={Rinzler} alt="Rinzler" side="right">
+<ImageParagraph src={placeholder} alt="Oscar" side="left">
   <p class="my-0">
-    Rinzler, another game developer, more used to staffing game tournaments and
-    conventions than furry events, eager to help out with sound and lighting and
-    other equipment
+    Oscar, part of the Art Department. 
+  </p>
+</ImageParagraph>
+
+<ImageParagraph src={Foxie} alt="Foxie" side="right">
+  <p class="my-0">
+    King Sir Foxie Blues the 1st, the fluffiest fox there ever was...
   </p>
 </ImageParagraph>
 
@@ -99,41 +119,6 @@ import CivetSolutions from "@assets/civet-solutions.jpg";
     Morgan, a web developer by day, eepy fawn by night, and consistently a big
     dumb durr based in Glasgow was recruited by Liamm; both into the fandom and
     to help build the site.
-  </p>
-</ImageParagraph>
-
-### Staff on a Break
-
-<ImageParagraph src={Ra} alt="Ra" side="left">
-  <p class="my-0">
-    Ra, creator of a print furry magazine, registration staff and responsible
-    for most of the organising of staff meetings, agendas, notes, to-do lists
-    and other important work
-  </p>
-</ImageParagraph>
-
-<ImageParagraph src={Ghasteater} alt="Ghasteater" side="right">
-  <p class="my-0">
-    Ghasteater, chipping in with bits of work all over the place, helping out
-    each of the departments, we were also looking into getting some stuff
-    written up in French to appeal to overseas guests, but that’ll have to wait
-    until next year
-  </p>
-</ImageParagraph>
-
-<ImageParagraph src={placeholder} alt="Foxiekins" side="left">
-  <p class="my-0">
-    Foxiekins, both a musician and an audio engineer, supplying all the sounds
-    to furry events, with many years prior experience working at Furcation and
-    now also joining us here too.
-  </p>
-</ImageParagraph>
-
-<ImageParagraph src={placeholder} alt="Bluegill" side="right">
-  <p class="my-0">
-    Bluegill, our long time customer service experienced staff member, here to
-    make sure things go smoothly for everyone and issues are dealt with
-    appropriately
   </p>
 </ImageParagraph>
 
