--- a/src/content/about-us/staff.mdx
+++ b/src/content/about-us/staff.mdx
@@ -21,7 +21,7 @@ import Phil from "@assets/phil-pem.jpg";
 import CivetSolutions from "@assets/civet-solutions.jpg";
 import Zeke from "@assets/zeke.webp";
 import Neo from "@assets/neo.webp";
-import Foxie from "@assets/foxie.jpg"
+import Foxie from "@assets/foxie.jpg";
 
 ### Meet the Staff
 
@@ -36,8 +36,8 @@ import Foxie from "@assets/foxie.jpg"
 <ImageParagraph src={Zeke} alt="Zeke" side="left">
   <p class="my-0">
     Zeke, a multisuiter london fur who is also Vice Chairman of East Sussex
-    Furs, using his experience in the furry fandom to assist Further South
-    as Operations Coordinator.  
+    Furs, using his experience in the furry fandom to assist Further South as
+    Operations Coordinator.
   </p>
 </ImageParagraph>
 
@@ -50,16 +50,14 @@ import Foxie from "@assets/foxie.jpg"
 
 <ImageParagraph src={Neo} alt="Neo Moonpaw" side="left">
   <p class="my-0">
-    Neo, a local sound and lighting engineer based in the hometown of Further South, 
-    Portsmouth. He’s a staff member for PortsmouthFurs and Sussex Furs, ensuring people
-    feel welcomed and are all having an amazing time!
+    Neo, a local sound and lighting engineer based in the hometown of Further
+    South, Portsmouth. He’s a staff member for PortsmouthFurs and Sussex Furs,
+    ensuring people feel welcomed and are all having an amazing time!
   </p>
 </ImageParagraph>
 
 <ImageParagraph src={placeholder} alt="Ace" side="right">
-  <p class="my-0">
-    Ace, assisting with music equipment.
-  </p>
+  <p class="my-0">Ace, assisting with music equipment.</p>
 </ImageParagraph>
 
 <ImageParagraph src={Millie} alt="Millie" side="left">
@@ -72,8 +70,8 @@ import Foxie from "@assets/foxie.jpg"
 <ImageParagraph src={Rinzler} alt="Rinzler" side="right">
   <p class="my-0">
     Rinzler, another game developer, more used to staffing game tournaments and
-    conventions than furry events, eager to help out with sound, lighting and other
-    equipment. 
+    conventions than furry events, eager to help out with sound, lighting and
+    other equipment.
   </p>
 </ImageParagraph>
 
@@ -94,9 +92,7 @@ import Foxie from "@assets/foxie.jpg"
 </ImageParagraph>
 
 <ImageParagraph src={placeholder} alt="Oscar" side="left">
-  <p class="my-0">
-    Oscar, part of the Art Department. 
-  </p>
+  <p class="my-0">Oscar, part of the Art Department.</p>
 </ImageParagraph>
 
 <ImageParagraph src={Foxie} alt="Foxie" side="right">
