Altered text in reg hurrying attendees to reg

--- a/src/content/registration/index.mdx
+++ b/src/content/registration/index.mdx
@@ -23,4 +23,6 @@ Registration launched on September 1st, and will continue through to the end of 
 
 The big button below will take you to our Civet Solutions hosted registration portal. Here, you can enter your personal details, choose your options and make your payment all in one place. Payments are processed via the Stripe Payment Service, which runs off your credit/debit card numbers. All details are securely stored and processed on servers our team has no access to. If you were with us for 2025, the site will retain your previous account and details for faster processing now.
 
+**Registration closes at the <u>end of Februrary</u>, register below while you still can!**
+
 <RegisterButton />
