Added Rosa/Ashley to Staff

--- a/src/content/about-us/staff.mdx
+++ b/src/content/about-us/staff.mdx
@@ -22,6 +22,7 @@ import CivetSolutions from "@assets/civet-solutions.jpg";
 import Zeke from "@assets/zeke.webp";
 import Neo from "@assets/neo.webp";
 import Foxie from "@assets/foxie.jpg";
+import Rosa from "@assets/rosa.webp";
 
 ### Meet the Staff
 
@@ -118,9 +119,20 @@ import Foxie from "@assets/foxie.jpg";
   </p>
 </ImageParagraph>
 
+<ImageParagraph src={Rosa} alt="Ashley/Rosa" side="left">
+  <p class="my-0">
+    Hiya, my name is Ashley or Rosa and the main thing I do or like doing is
+    taking photos of furry's at meets or conventions.
+  </p>
+</ImageParagraph>
+
 ### Other Special Thanks To
 
-<ImageParagraph src={CivetSolutions} alt="Trapa Civet and Alo Foxx" side="left">
+<ImageParagraph
+  src={CivetSolutions}
+  alt="Trapa Civet and Alo Foxx"
+  side="right"
+>
   <p class="my-0">
     Trapa Civet and Alo Foxx of Convention Master, our outsourced registration
     and payment processing service, with over twenty years experience each, and
@@ -129,7 +141,7 @@ import Foxie from "@assets/foxie.jpg";
   </p>
 </ImageParagraph>
 
-<ImageParagraph src={Phil} alt="Phil" side="right">
+<ImageParagraph src={Phil} alt="Phil" side="left">
   <p class="my-0">
     Phil, with experience staffing various different conventions over the years
     and an in depth knowledge of technology and computing, helping out with
@@ -138,7 +150,7 @@ import Foxie from "@assets/foxie.jpg";
   </p>
 </ImageParagraph>
 
-<ImageParagraph src={Jennifer} alt="Jennifer" side="left">
+<ImageParagraph src={Jennifer} alt="Jennifer" side="right">
   <p class="my-0">
     Jennifer, our venue agent with two decades experience at a whole bunch of
     conventions, working from the office to source the best possible hotels and
